Added config setting for autoenable ay chip on Spectrum models without ay chip
Added emulation of Stack Light Rifle
Added emulation of Defender Light Gun
Added emulation of Trojan Light Pen
Added emulation of Datel Lightwriter
Added emulation of Spectrum Doodler Lightpen
Added lightgun scope
Added ZSF snapshot previews for QL, ZX80 and ZX81 machines
Allow to see GO SUB stack of ZX80 and ZX81

Improved Snapshots in RAM:
- Browse visually all the stored snapshots in RAM, like on a "Time Machine"
- Allow to save snapshots in RAM; you could do it before automatically at fixed intervals, now you can save it whenever you want

Improved ZX Vision:
- Added new Top Menu (not enabled by default)
- Reordered settings & new menu: check settings -> Emulated Display, General, Main Window, ZX Vision
- Added shortcuts helper action to create icon to trigger recorded keys

Improved ZX Desktop:
- Allow to set small values for ZX Desktop width size
- Add setting to disallow enabling ZX Desktop
- Allow to change background color for icons, lower and upper buttons
- Added setting to add a stroke on icons

Improved editing joystick to events/keys (allow to unasign easily)
Improved ZX Life: allow to speed up game, fix behaviour on board limits
Improved Trash icon
Improved decimal precision of Basic Variables window values
Improve code to allow compilation on other Unix systems, like AROS, FiwixOS, Sortix
Improved debug cpu:
- Show when registers values are modified by last opcode execution
- Views 5 and 6 use a different memptr ("memptx")
- Show when memory is modified by last opcode execution on views 5 and 6
- Direct key (t) to evaluate expressions
- Added user variables VAR0, VAR1, ... VAR9
- Added video frames counter

Fixed emulation of Magnum Light Phaser
Fixed reading port BFFD on Spectrum +2A/+3
Fixed loading tape with --tape and --realtape and autoload snapshot on start
Fixed uncompress tar and rar files with spaces in name