@@ -17,6 +17,7 @@ Agregada emulación de Spectrum Doodler Lightpen
 Agregada mirilla de lightgun
 Agregada vista previa de snapshots ZSF de máquinas QL, ZX80 y ZX81
 Permitir ver GO SUB stack de ZX80 y ZX81
+Permitir caracteres utf-8 en footer
 
 Mejorado Snapshots en RAM:
 - Navegar de manera visual por todos los snapshots en RAM, como en una "Máquina del Tiempo"
