@@ -72,5 +72,5 @@ quiza icono ramdisk que englobe snapshots y otras cosas
 
 -Soportar uft-8 en el footer, que sirva para texto footer normal pero tambien con opciones de --programsettingsinfo de archivos .config.
 Quitar el parche para soportar la eñe en dicha opcion
-Cuidado que  en la consola si hay verbose debug, se muestra caracter extraño para la ñ
+->revisar Cuidado que  en la consola si hay verbose debug, se muestra caracter extraño para la ñ
 *ahora lo que necesita hacer bien es el scroll
